--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,5 +1,4 @@
 <%- include('./common/header') %>
-<% let user= "john";%>
 <div id="root">
     <div class="alert-wrapper" style="top: -100px;"><div class="alert-content"></div></div>
     <div class="body-wrap" style="">
@@ -9,66 +8,74 @@
                     <%- include('./common/topnav') %>
                     <div class="post-header-wrapper back_sec">
                         <div class="back_btn">
-                            <span class="middle-header-content"><%- user %> Profile</span>
+                            <span class="middle-header-content"><%- user['handle'] %> Profile</span>
                         </div>
                     </div>
                     <div class="profile-banner-wrapper">
-                        <!-- if user cover picture exist show that else -->
-                        <img src="https://i.imgur.com/CAFy1oY.jpg" alt="<%- user.name %>">
+                        <% if(user.coverPicture.original.url){ %>
+                            <img src="<%- user.coverPicture.original.url %>" alt="<%- user.name %>">
+                        <% }else{ %>
+                            <img src="https://i.imgur.com/CAFy1oY.jpg" alt="<%- user.name %>">
+                        <% } %>
                     </div>
                     <div class="profile-details-wrapper">
                         <div class="profile-options">
                             <div class="profile-image-wrapper">
-                                <!-- if user profile picture exist show that else -->
-                                <img src="https://i.imgur.com/iV7Sdgm.jpg" alt="username">
+                                <!--https://github.com/lensterxyz/lenster/blob/88e151739dab2acb47f77398698e5d3193aa978f/apps/api/src/lib/getIPFSLink.ts -->
+                                <% if(user.picture.original.url){ %>
+                                    <img src="<%- user.picture.original.url %>" alt="<%- user.name %>"><% 
+                                }else{ %>
+                                    <img src="https://i.imgur.com/iV7Sdgm.jpg" alt="<%- user.name %>">
+                                <% } %>
                             </div>
                             <div>
                                 <!-- if user is login then show edit profile button  -->
                                 <button class="profile-edit-button" id="profile_edit">Edit profile</button>
-                                <!-- else if user is login  and following profile then show following button  -->
+                                <!-- else if user is login  and following profile then show following button  
                                 <button class="btn_unfollow_user" data-username="user">Following</button>
-                                <!-- else if user is login  and not following profile then show follow button  -->
-                                <button class="btn_follow_user" data-username="user">Follow</button>
+                                 else if user is login  and not following profile then show follow button 
+                                <button class="btn_follow_user" data-username="user"> Follow</button> -->
                             </div>
                         </div>
                         <div class="profile-details-box">
-                            <div class="profile-name">@<%- user %></div>
+                            <div class="profile-name"><%- user.name %></div>
                             <div class="profile-username">
                                 <div class="p_data_names">
                                     <ul class="usr-short-details">
                                         <li>
-                                            <img src="https://img.icons8.com/ios-filled/10/1da1f2/lightning-bolt--v1.png"/>here<span>User</span>
+                                            @<%- user.handle %>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <!-- if user profile has bio, show else empty -->
-                            <div class="profile-bio">
-                                <%- user %> Bio here
-                            </div>
+                            <% if(user.bio){ %>
+                                <div class="profile-bio">
+                                    <%- user.bio %> 
+                                </div>
+                            <% }else{} %>
                             <div class="profile-bio"></div>
                             <div class="profile-info-box">
                             <!-- if user profile has location, show else empty -->
                                 <div class="profile-location">
                                     <span class="inline-small-icon white-in-dark-mode"><svg id="Capa_1" x="0px" y="0px" width="384.25px" height="384.25px" viewBox="0 0 384.25 384.25" style="enable-background:new 0 0 384.25 384.25;"><g><g><path d="M192.125,0C122.955,0,66.674,56.279,66.674,125.449c0,63.29,100.927,232.376,112.427,251.451c2.757,4.557,7.694,7.35,13.024,7.35s10.267-2.793,13.021-7.35c11.504-19.074,112.43-188.161,112.43-251.451C317.576,56.28,261.295,0,192.125,0z M192.125,339.1c-35.029-60.594-95.039-172.887-95.039-213.649c0-52.404,42.635-95.035,95.039-95.035c52.404,0,95.039,42.631,95.039,95.035C287.164,166.198,227.154,278.498,192.125,339.1z"/><path d="M192.125,53.214c-39.835,0-72.236,32.403-72.236,72.235c0,39.836,32.401,72.236,72.236,72.236c39.832,0,72.236-32.4,72.236-72.236C264.361,85.618,231.957,53.214,192.125,53.214z M192.125,167.274c-23.062,0-41.824-18.762-41.824-41.824c0-23.06,18.762-41.824,41.824-41.824c23.06,0,41.824,18.765,41.824,41.824C233.949,148.512,215.186,167.274,192.125,167.274z"/></g></g></svg></span>
-                                    <%- user %> Location
+                                    <%-  %> Location
                                 </div>
                                 <div class="profile-date mr-100">
                                     <span class="inline-small-icon white-in-dark-mode">
                                         <svg id="Capa_1" viewBox="0 0 24 24"><g><path d="M19.708 2H4.292C3.028 2 2 3.028 2 4.292v15.416C2 20.972 3.028 22 4.292 22h15.416C20.972 22 22 20.972 22 19.708V4.292C22 3.028 20.972 2 19.708 2zm.792 17.708c0 .437-.355.792-.792.792H4.292c-.437 0-.792-.355-.792-.792V6.418c0-.437.354-.79.79-.792h15.42c.436 0 .79.355.79.79V19.71z"></path><circle cx="7.032" cy="8.75" r="1.285"></circle><circle cx="7.032" cy="13.156" r="1.285"></circle><circle cx="16.968" cy="8.75" r="1.285"></circle><circle cx="16.968" cy="13.156" r="1.285"></circle><circle cx="12" cy="8.75" r="1.285"></circle><circle cx="12" cy="13.156" r="1.285"></circle><circle cx="7.032" cy="17.486" r="1.285"></circle><circle cx="12" cy="17.486" r="1.285"></circle></g></svg>
                                     </span>
-                                    <%- user %> Joined Time
+                                    <%- %> Joined Time
                                 </div>
                                 <!-- if user profile has website, show else empty -->
                                 <div class="profile-date prof_web">
                                     <span class="inline-small-icon white-in-dark-mode earth"><svg id="Capa_1" width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M3.51211712,15 L8.17190229,15 C8.05949197,14.0523506 8,13.0444554 8,12 C8,10.9555446 8.05949197,9.94764942 8.17190229,9 L3.51211712,9 C3.18046266,9.93833678 3,10.9480937 3,12 C3,13.0519063 3.18046266,14.0616632 3.51211712,15 L3.51211712,15 Z M3.93551965,16 C5.12590433,18.3953444 7.35207678,20.1851177 10.0280093,20.783292 C9.24889451,19.7227751 8.65216136,18.0371362 8.31375067,16 L3.93551965,16 L3.93551965,16 Z M20.4878829,15 C20.8195373,14.0616632 21,13.0519063 21,12 C21,10.9480937 20.8195373,9.93833678 20.4878829,9 L15.8280977,9 C15.940508,9.94764942 16,10.9555446 16,12 C16,13.0444554 15.940508,14.0523506 15.8280977,15 L20.4878829,15 L20.4878829,15 Z M20.0644804,16 L15.6862493,16 C15.3478386,18.0371362 14.7511055,19.7227751 13.9719907,20.783292 C16.6479232,20.1851177 18.8740957,18.3953444 20.0644804,16 L20.0644804,16 Z M9.18440269,15 L14.8155973,15 C14.9340177,14.0623882 15,13.0528256 15,12 C15,10.9471744 14.9340177,9.93761183 14.8155973,9 L9.18440269,9 C9.06598229,9.93761183 9,10.9471744 9,12 C9,13.0528256 9.06598229,14.0623882 9.18440269,15 L9.18440269,15 Z M9.3349823,16 C9.85717082,18.9678295 10.9180729,21 12,21 C13.0819271,21 14.1428292,18.9678295 14.6650177,16 L9.3349823,16 L9.3349823,16 Z M3.93551965,8 L8.31375067,8 C8.65216136,5.96286383 9.24889451,4.27722486 10.0280093,3.21670804 C7.35207678,3.81488234 5.12590433,5.60465556 3.93551965,8 L3.93551965,8 Z M20.0644804,8 C18.8740957,5.60465556 16.6479232,3.81488234 13.9719907,3.21670804 C14.7511055,4.27722486 15.3478386,5.96286383 15.6862493,8 L20.0644804,8 L20.0644804,8 Z M9.3349823,8 L14.6650177,8 C14.1428292,5.03217048 13.0819271,3 12,3 C10.9180729,3 9.85717082,5.03217048 9.3349823,8 L9.3349823,8 Z M12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 Z"/></svg></span>
-                                    <a href="<%- user %>" target="_blank">user website</a> 
+                                    <a href="<%- %>" target="_blank">user website</a> 
                                 </div>
                             </div>
                         </div>
                         <div class="profile-social-box">
-                            <div><p class="follow-num"> <%- user %> Followers </p><p class="follow-text"> Following </p></div>
-                            <div><p class="follow-num"> <%- user %>Following </p><p class="follow-text"> Followers </p></div>
+                            <div><p class="follow-num"> <%- user.stats.totalFollowing %> </p><p class="follow-text"> Following </p></div>
+                            <div><p class="follow-num"> <%- user.stats.totalFollowers %> </p><p class="follow-text"> Followers </p></div>
                         </div>
                     </div>
                     <div class="profile-nav-menu">
