--- a/src/views/common/home.ejs
+++ b/src/views/common/home.ejs
@@ -1,1 +1,30 @@
-ok
+<div class="inner-card-wrapper">
+  <div class="card-userPic-wrapper">
+    <a href="/profile/">
+      <!-- if user login show his profile picture -->
+        <img alt="" width="100%" height="49px" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" />
+    </a>
+  </div>
+  <div class="card-content-wrapper">
+    <div class="card-content-header">
+      <div class="card-header-detail">
+        <span class="card-header-username">
+          <a href="/profile/<%- %>"><b>AltcoinDailyio</b>  @AuthorName </a>
+        </span>
+        <span class="card-header-dot">·</span>
+        <span class="card-header-date">Few Minutes ago</span>
+      </div>
+    </div>
+    <div class="post-content"><p>Thinking for myself & doing my own research has made me the most money in #crypto. 🎯</p></div>
+    <div class="card-content-images">
+      <a href="/post/">
+        <div class="card-image-link">
+          <img alt="" src="https://i.postimg.cc/PJjXbLCP/new-design-for-banner.png" />
+        </div>
+      </a>
+    </div>
+    <div class="card-buttons-wrapper likes_section">
+      <div class="card-button-wrap"></div>
+
+  </div>
+</div>
