--- a/src/views/common/home.ejs
+++ b/src/views/common/home.ejs
@@ -25,6 +25,7 @@
     </div>
     <div class="card-buttons-wrapper likes_section">
       <div class="card-button-wrap"></div>
+    </div>
 
   </div>
 </div>
