--- a/src/views/notifications.ejs
+++ b/src/views/notifications.ejs
@@ -7,11 +7,12 @@
                     <%- include('./common/topnav') %>
                     <div class="post-header-wrapper back_sec"><div class="back_btn"><span class="middle-header-content"> Notifications</span></div></div>
                     <div class="explore-nav-menu">
-                        <div class="explore-nav-item activeTab posts_tab">All</div>
-                        <div class="explore-nav-item replies_tab">Mentions</div>
-                        <div class="explore-nav-item media_tab">Likes</div>
-                        <div class="explore-nav-item collected_tab">Comments</div>
-                        <div class="explore-nav-item nftsposts_tab">Collects</div>
+                        <div class="explore-nav-item activeTab notifications_tab">All</div>
+                        <div class="explore-nav-item mentions_tab">Mentions</div>
+                        <div class="explore-nav-item likes_tab">Likes</div>
+                        <div class="explore-nav-item mirrors_tab">Mirrors</div>
+                        <div class="explore-nav-item collects_tab">Collects</div>
+                        <div class="explore-nav-item comments_tab">Comments</div>
                     </div>
                     
                 </div>
