--- a/public/css/style.css
+++ b/public/css/style.css
@@ -549,3 +549,124 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 .dis{pointer-events:none}.trans_bal{padding-left:15px;color: #1da1f2;}.w_btn{border-radius: 4px;padding: 8px 16px;}.f_rite{float:right}.act_keys_title{padding:20px;text-align: center;}.mb-30{margin-bottom: 30px;}.min-h-auto{min-height:auto;}.f_16{display: flex;align-items: center;}.ml8{margin-left: 8px;}
 .pg_title{font-weight: 600;}.min_boost{display: flex;justify-content: center;margin-bottom: 10px;}.vert_mid{vertical-align: middle;}.btn_pg{cursor: pointer;width: 30%;margin:20px 0 0;border:none;background:#1da1f2;color:#fff;font-weight:700;font-size:15px;min-height: 40px;border-radius:4px;}
 .loader {border: 4px solid #f3f3f3; /* Light grey */ border-top: 4px solid #3498db; /* Blue */ border-radius: 50%; width: 30px; height: 30px; animation: spin 2s linear infinite; margin-left:50%; } @keyframes spin{ 0% {transform:rotate(0deg); } 100% {transform:rotate(360deg); }} .loader-hidden {display:none;}.tmac_meta{color:#1da1f2;display: flex;justify-content: center;font-weight: bold;cursor:pointer}
+
+
+/* Modal Css Start */
+.ct_modal {
+	background-color: rgba(0, 0, 0, 0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: 999;
+	opacity: 0;
+	visibility: hidden;
+	transition: .2s;
+}
+.ct_modal.show {
+	opacity: 1;
+	visibility: visible;
+}
+  .ct_modal_inner {
+	width: 600px;
+	background-color: #fff;
+	border-radius: 16px;
+	margin: 24px auto;
+	max-height: 90vh;
+}
+  .ct_modal_header {
+	padding: 0 16px;
+	height: 53px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+  }
+  
+
+  .close_ct_modal {
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	border: 0;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: .2s;
+	background-color: transparent;
+	cursor: pointer;
+	margin-left: -8px;
+  }
+  .close_ct_modal:hover {
+	background-color: #E6E7E7;
+  }
+  
+  .ct_modal_body {
+	display: grid;
+	grid-template-columns: 48px auto;
+	grid-gap: 14px;
+	padding: 16px 0 16px 16px;
+	scrollbar-color: rgb(185, 202, 211) rgb(247, 249, 249);
+}
+
+  .tweet_avater img {
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #E8F5FD;
+  }
+  .tweet_content textarea {
+	width: 100%;
+	border: 0;
+	transition: .2s;
+	font-size: 19px;
+	line-height: 1.3;
+	padding-right: 16px;
+  }
+  .ct_modal_footer {
+	border-top: 1px solid rgb(239, 243, 244);
+	padding: 10px 16px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+}
+.rd-btn {
+	background-color: rgb(29, 155, 240);
+	border: 0;
+	border-radius: 30px;
+	padding: 0 16px;
+	height: 36px;
+	display: flex;
+	align-items: center;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 600;
+	cursor: pointer;
+}
+  .rd-btn:hover {
+	background-color: #1A8CD8;
+  }
+  
+.ct_footer_left {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+  }
+  .tweet_content_options {
+	width: 36px;
+	height: 36px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	transition: .2s;
+  }
+  .tweet_content_options:hover {
+	background-color: #E8F5FD;
+  }
+/* Modal Css End */
