--- a/src/views/common/header.ejs
+++ b/src/views/common/header.ejs
@@ -15,3 +15,70 @@
 	<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Assistant&amp;display=swap"/>
 </head>
 <body>
+
+	<button data-ctModalTrigger="#tweet-modal">Trigger</button>
+	<div class="ct_modal" id="tweet-modal">
+		<form action="#" class="ct_modal_inner">
+			<div class="ct_modal_header">
+				<button class="close_ct_modal" data-ctModalClose><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+					<path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+				  </svg></button>
+			</div>
+			<div class="ct_modal_body">
+					<div class="tweet_avater">
+						<img src="" alt="Av">
+					</div>
+					
+	
+					<div class="tweet_content">
+	
+						<textarea name="" id="" cols="20" rows="5" placeholder="What's happenning?"></textarea>
+					</div>
+			</div>
+
+			<div class="ct_modal_footer">
+				<div class="ct_footer_left">
+					<div class="tweet_content_options insert-img">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div>
+					<div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div><div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div><div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div>
+				</div>
+				<button type="submit" class="rd-btn">Tweet</button>
+			</div>
+		</div>
+	</div>
+
+
+	<script>
+		document.querySelectorAll('[data-ctModalTrigger]').forEach(single=>{
+			single.addEventListener('click', function(e){
+				e.preventDefault()
+				document.querySelector(single.dataset.ctmodaltrigger).classList.add('show');
+			})
+		})
+
+		document.querySelectorAll('[data-ctModalClose]').forEach(single=>{
+			single.addEventListener('click', function(e){
+				e.preventDefault()
+				this.closest('.ct_modal').classList.remove('show');
+			})
+		})
+	</script>
