--- a/public/css/style.css
+++ b/public/css/style.css
@@ -553,7 +553,6 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 
 /* Modal Css Start */
 .ct_modal {
-	background-color: rgba(0, 0, 0, 0.4);
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -563,17 +562,31 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 	opacity: 0;
 	visibility: hidden;
 	transition: .2s;
+	padding: 0 15px;
 }
 .ct_modal.show {
 	opacity: 1;
 	visibility: visible;
 }
-  .ct_modal_inner {
-	width: 600px;
+.ct_modal_overlay {
+	background-color: rgba(0, 0, 0, 0.4);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+	right: 0;
+}
+.ct_modal_inner {
+	max-width: 600px;
 	background-color: #fff;
 	border-radius: 16px;
 	margin: 24px auto;
 	max-height: 90vh;
+	z-index: 1;
+	position: relative;
+	width: 100%;
 }
   .ct_modal_header {
 	padding: 0 16px;
@@ -665,8 +678,11 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 	justify-content: center;
 	border-radius: 50%;
 	transition: .2s;
-  }
+	cursor: pointer;
+}
   .tweet_content_options:hover {
 	background-color: #E8F5FD;
   }
+
+
 /* Modal Css End */
