--- a/src/views/common/lnav.ejs
+++ b/src/views/common/lnav.ejs
@@ -27,6 +27,161 @@
 	<div id="moremenu" class="Nav-link"><div class="Nav-item-hover"><svg viewBox="0 0 24 24"><g><path d="M16.5 10.25c-.965 0-1.75.787-1.75 1.75s.784 1.75 1.75 1.75c.964 0 1.75-.786 1.75-1.75s-.786-1.75-1.75-1.75zm0 2.5c-.414 0-.75-.336-.75-.75 0-.413.337-.75.75-.75s.75.336.75.75c0 .413-.336.75-.75.75zm-4.5-2.5c-.966 0-1.75.787-1.75 1.75s.785 1.75 1.75 1.75 1.75-.786 1.75-1.75-.784-1.75-1.75-1.75zm0 2.5c-.414 0-.75-.336-.75-.75 0-.413.337-.75.75-.75s.75.336.75.75c0 .413-.336.75-.75.75zm-4.5-2.5c-.965 0-1.75.787-1.75 1.75s.785 1.75 1.75 1.75c.964 0 1.75-.786 1.75-1.75s-.787-1.75-1.75-1.75zm0 2.5c-.414 0-.75-.336-.75-.75 0-.413.337-.75.75-.75s.75.336.75.75c0 .413-.336.75-.75.75z"></path><path d="M12 22.75C6.072 22.75 1.25 17.928 1.25 12S6.072 1.25 12 1.25 22.75 6.072 22.75 12 17.928 22.75 12 22.75zm0-20C6.9 2.75 2.75 6.9 2.75 12S6.9 21.25 12 21.25s9.25-4.15 9.25-9.25S17.1 2.75 12 2.75z"></path></g></svg><div class="Nav-item">More</div></div><div class="more-menu-background" style="display: none;"><div class="more-modal-wrapper"><div class="more-menu-content" style="top: 353.65px; left: 147px;">
 	<a class="more-menu-item" href="https://besocial.help" target="_blank" aria-label="help"><span>Help</span><span><svg viewBox="0 0 32 32"><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"/><circle cx="16" cy="23.5" r="1.5"/><path d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"/></svg></span></a><a class="more-menu-item" href="https://breezescan.io" target="_blank"><span>Explorer</span><span><svg viewBox="0 0 487.95 487.95" style="enable-background:new 0 0 487.95 487.95;" xml:space="preserve"><g><g><path d="M481.8,453l-140-140.1c27.6-33.1,44.2-75.4,44.2-121.6C386,85.9,299.5,0.2,193.1,0.2S0,86,0,191.4s86.5,191.1,192.9,191.1c45.2,0,86.8-15.5,119.8-41.4l140.5,140.5c8.2,8.2,20.4,8.2,28.6,0C490,473.4,490,461.2,481.8,453z M41,191.4c0-82.8,68.2-150.1,151.9-150.1s151.9,67.3,151.9,150.1s-68.2,150.1-151.9,150.1S41,274.1,41,191.4z"/></g></g></svg></span></a><div class="more-menu-item" id="uiModeChange"><span>Display</span><span><svg viewBox="0 0 512 512"><g><path fill="currentColor" d="M320 32L304 0l-16 32-32 16 32 16 16 32 16-32 32-16zm138.7 149.3L432 128l-26.7 53.3L352 208l53.3 26.7L432 288l26.7-53.3L512 208z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:currentColor;"></path><path fill="currentColor" d="M332.2 426.4c8.1-1.6 13.9 8 8.6 14.5a191.18 191.18 0 0 1-149 71.1C85.8 512 0 426 0 320c0-120 108.7-210.6 227-188.8 8.2 1.6 10.1 12.6 2.8 16.7a150.3 150.3 0 0 0-76.1 130.8c0 94 85.4 165.4 178.5 147.7z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:currentColor;"></path></g></svg></span></div>
 	<a class="more-menu-item more-item" href="/welcome" aria-label="welcome"><span>Login</span><span><svg viewBox="0 0 24 24"><g><path d="M12 11.816c1.355 0 2.872-.15 3.84-1.256.814-.93 1.078-2.368.806-4.392-.38-2.825-2.117-4.512-4.646-4.512S7.734 3.343 7.354 6.17c-.272 2.022-.008 3.46.806 4.39.968 1.107 2.485 1.256 3.84 1.256zM8.84 6.368c.162-1.2.787-3.212 3.16-3.212s2.998 2.013 3.16 3.212c.207 1.55.057 2.627-.45 3.205-.455.52-1.266.743-2.71.743s-2.255-.223-2.71-.743c-.507-.578-.657-1.656-.45-3.205zm11.44 12.868c-.877-3.526-4.282-5.99-8.28-5.99s-7.403 2.464-8.28 5.99c-.172.692-.028 1.4.395 1.94.408.52 1.04.82 1.733.82h12.304c.693 0 1.325-.3 1.733-.82.424-.54.567-1.247.394-1.94zm-1.576 1.016c-.126.16-.316.246-.552.246H5.848c-.235 0-.426-.085-.552-.246-.137-.174-.18-.412-.12-.654.71-2.855 3.517-4.85 6.824-4.85s6.114 1.994 6.824 4.85c.06.242.017.48-.12.654z"></path></g></svg></span></a></div></div></div></div><% } %>
-	<div class="Nav-main"><% if(loguser){ %><div class="Nav-entry-link" id="logout_btn"><div class="Nav-main-btn">Logout</div></div><% } else { %><div class="Nav-entry-link" id="main_login_btn"><div class="Nav-main-btn">Login</div></div><% } %></div>
+	<div class="Nav-main"><% if(loguser){ %><div class="Nav-entry-link" id="logout_btn" data-ctModalTrigger="#tweet-modal"><div class="Nav-main-btn">Logout</div></div><% } else { %><div class="Nav-entry-link" id="main_login_btn"><div class="Nav-main-btn">Login</div></div><% } %></div>
 </nav>
 <div></div></div></div></div></div></nav><% if(typeof(lnav) =="undefined") lnav= "" %><script>var nav_val = "<%= lnav %>"</script>
+
+
+<div class="ct_modal" id="tweet-modal">
+		<form action="#" class="ct_modal_inner">
+			<div class="ct_modal_header">
+				<button class="close_ct_modal" data-ctModalClose><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="rgb(15, 20, 25)" class="bi bi-x-lg" viewBox="0 0 16 16">
+					<path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+				  </svg></button>
+			</div>
+			<div class="ct_modal_body">
+					<div class="tweet_avater">
+						<img src="" alt="Av">
+					</div>
+					
+	
+					<div class="tweet_content">
+						<div class="select">
+							<div class="selectBtn" data-type="firstOption">Everyone</div>
+							<div class="selectDropdown">
+								<h4 class="dropdown_title">Choose audience</h4>
+								<div class="option" data-type="Everyone">
+									<div class="option-inner">
+										<span class="option-icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-globe-americas" viewBox="0 0 16 16">
+											<path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0ZM2.04 4.326c.325 1.329 2.532 2.54 3.717 3.19.48.263.793.434.743.484-.08.08-.162.158-.242.234-.416.396-.787.749-.758 1.266.035.634.618.824 1.214 1.017.577.188 1.168.38 1.286.983.082.417-.075.988-.22 1.52-.215.782-.406 1.48.22 1.48 1.5-.5 3.798-3.186 4-5 .138-1.243-2-2-3.5-2.5-.478-.16-.755.081-.99.284-.172.15-.322.279-.51.216-.445-.148-2.5-2-1.5-2.5.78-.39.952-.171 1.227.182.078.099.163.208.273.318.609.304.662-.132.723-.633.039-.322.081-.671.277-.867.434-.434 1.265-.791 2.028-1.12.712-.306 1.365-.587 1.579-.88A7 7 0 1 1 2.04 4.327Z"/>
+										  </svg></span>
+										  <div class="display-text">Everyone</div>
+									</div>
+								</div>
+								<div class="option" data-type="Twitter Circle">
+									<div class="option-inner">
+										<span class="option-icon bg_green"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+											<path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"/>
+										  </svg></span>
+										  <div>
+											<div class="display-text">Twitter Circle</div>
+											<p>0 People <a href="#" class="c-link">Edit</a></p>
+										  </div>
+									</div>
+									
+								</div>
+							</div>
+						</div>
+	
+						<textarea name="" id="" cols="20" rows="5" placeholder="What's happenning?"></textarea>
+
+						<div class="select type-2">
+							<div class="selectBtn" data-type="firstOption"><span class="option-icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-globe-americas" viewBox="0 0 16 16">
+								<path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0ZM2.04 4.326c.325 1.329 2.532 2.54 3.717 3.19.48.263.793.434.743.484-.08.08-.162.158-.242.234-.416.396-.787.749-.758 1.266.035.634.618.824 1.214 1.017.577.188 1.168.38 1.286.983.082.417-.075.988-.22 1.52-.215.782-.406 1.48.22 1.48 1.5-.5 3.798-3.186 4-5 .138-1.243-2-2-3.5-2.5-.478-.16-.755.081-.99.284-.172.15-.322.279-.51.216-.445-.148-2.5-2-1.5-2.5.78-.39.952-.171 1.227.182.078.099.163.208.273.318.609.304.662-.132.723-.633.039-.322.081-.671.277-.867.434-.434 1.265-.791 2.028-1.12.712-.306 1.365-.587 1.579-.88A7 7 0 1 1 2.04 4.327Z"/>
+							  </svg></span>Everyone</div>
+							<div class="selectDropdown">
+								<h4 class="dropdown_title">Who can reply? <span>Choose who can reply to this Tweet. Anyone mentioned can always reply.</span></h4>
+								<div class="option" data-type="Everyone">
+									<div class="option-inner">
+										  <div class="display-text"><span class="option-icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-globe-americas" viewBox="0 0 16 16">
+											<path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0ZM2.04 4.326c.325 1.329 2.532 2.54 3.717 3.19.48.263.793.434.743.484-.08.08-.162.158-.242.234-.416.396-.787.749-.758 1.266.035.634.618.824 1.214 1.017.577.188 1.168.38 1.286.983.082.417-.075.988-.22 1.52-.215.782-.406 1.48.22 1.48 1.5-.5 3.798-3.186 4-5 .138-1.243-2-2-3.5-2.5-.478-.16-.755.081-.99.284-.172.15-.322.279-.51.216-.445-.148-2.5-2-1.5-2.5.78-.39.952-.171 1.227.182.078.099.163.208.273.318.609.304.662-.132.723-.633.039-.322.081-.671.277-.867.434-.434 1.265-.791 2.028-1.12.712-.306 1.365-.587 1.579-.88A7 7 0 1 1 2.04 4.327Z"/>
+										  </svg></span>Everyone</div>
+									</div>
+								</div><div class="option" data-type="Everyone">
+									<div class="option-inner">
+										  <div class="display-text"><span class="option-icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+											<path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"></path>
+										  </svg></span> People you follow</div>
+									</div>
+								</div><div class="option" data-type="Everyone">
+									<div class="option-inner">
+										  <div class="display-text"><span class="option-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+  <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
+</svg></span> only People you mention</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+			</div>
+
+			<div class="ct_modal_footer">
+				<div class="ct_footer_left">
+					<div class="tweet_content_options media">
+						<label for="media" style="display: flex; align-items: center; justify-content: center; height: 100%; position: relative;">
+							<input type="text" id="media" style="max-width: 0; max-height: 0; opacity: 0; visibility: hidden; position: absolute;">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image" viewBox="0 0 16 16">
+								<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+								<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+							  </svg>
+						</label>
+					</div>
+					<div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div><div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div><div class="tweet_content_options">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image" viewBox="0 0 16 16">
+							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+						  </svg>
+					</div>
+				</div>
+				<button type="submit" class="rd-btn">Tweet</button>
+			</div>
+		</form>
+	</div>
+
+
+	<script>
+		// Script for open/close Modal 
+		document.querySelectorAll('[data-ctModalTrigger]').forEach(single=>{
+			single.addEventListener('click', function(e){
+				e.preventDefault()
+				const ctModal = document.querySelector(single.dataset.ctmodaltrigger)
+				ctModal.classList.add('show');
+				ctModal.insertAdjacentHTML('afterbegin', '<div class="ct_modal_overlay"></div>');
+				ctModal.querySelector('.ct_modal_overlay').addEventListener('click', function(){
+					this.closest('.ct_modal').classList.remove('show');
+				})
+			})
+		})
+
+		document.querySelectorAll('[data-ctModalClose]').forEach(single=>{
+			single.addEventListener('click', function(e){
+				e.preventDefault()
+				this.closest('.ct_modal').classList.remove('show');
+			})
+		})
+
+
+		// Script for Dropdown 
+		let index = 1;
+
+		const on = (listener, query, fn) => {
+			document.querySelectorAll(query).forEach(item => {
+				item.addEventListener(listener, el => {
+					fn(el);
+				})
+			})
+		}
+
+		on('click', '.selectBtn', item => {
+			const next = item.target.nextElementSibling;
+			next.classList.toggle('toggle');
+			next.style.zIndex = index++;
+		});
+		on('click', '.option', item => {
+			item.target.closest('.selectDropdown').classList.remove('toggle');
+			const parent = item.target.closest('.select').children[0];
+			parent.setAttribute('data-type', item.target.closest('.option').getAttribute('data-type'));
+			parent.innerHTML = item.target.closest('.option').querySelector('.display-text').innerHTML;
+		})
+
+	</script>
