--- a/public/css/style.css
+++ b/public/css/style.css
@@ -557,12 +557,13 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 	top: 0;
 	left: 0;
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	z-index: 999;
 	opacity: 0;
 	visibility: hidden;
 	transition: .2s;
 	padding: 0 15px;
+	overflow-y: scroll;
 }
 .ct_modal.show {
 	opacity: 1;
@@ -570,13 +571,14 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 }
 .ct_modal_overlay {
 	background-color: rgba(0, 0, 0, 0.4);
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: 0;
 	right: 0;
+	bottom: 0;
 }
 .ct_modal_inner {
 	max-width: 600px;
@@ -678,6 +680,9 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
 	justify-content: center;
 	border-radius: 50%;
 	transition: .2s;
+	cursor: pointer;
+}
+.tweet_content_options label {
 	cursor: pointer;
 }
   .tweet_content_options:hover {
@@ -851,6 +856,12 @@ body.dark_mode .reward_pool{content:url(/images/main_reward_pool.png);margin-top
   }
   .select.type-2 .selectDropdown {
 	min-width: 300px;
+}
+
+@media screen and(max-width: 600px) {
+	.select.type-2 .selectDropdown {
+		left: -79px;
+	}
 }
   /* Dropdown Css End */
 /* Modal Css End */
