feat(): authenticate to lens

--- a/src/views/common/lnav.ejs
+++ b/src/views/common/lnav.ejs
@@ -320,7 +320,7 @@
 									<% } %>
 										<div class="Nav-main">
 											<% if(loguser){ %>
-												<div class="Nav-entry-link" id="logout_btn" data-ctModalTrigger="#tweet-modal">
+												<div class="Nav-entry-link" id="logout_btn">
 													<div class="Nav-main-btn">Logout</div>
 												</div>
 												<% } else { %>
