feat(): add lens claim profile modal

--- a/src/views/common/lnav.ejs
+++ b/src/views/common/lnav.ejs
@@ -515,6 +515,29 @@
 		</div>
 	</div>
 
+	<div class="ct_modal" id="lens-claim-modal">
+		<div class="modal-container">
+			<div class="ct_modal_header">
+				<button class="close_ct_modal" data-ctModalClose>
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="rgb(15, 20, 25)" class="bi bi-x-lg"
+						viewBox="0 0 16 16">
+						<path
+							d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
+					</svg>
+				</button>
+			</div>
+			<div class="modal-body">
+				<h4>
+					Claim your lens profile 🌿
+					</br>
+					Visit <a href="https://claim.lens.xyz/" target="_blank">claiming site</a> to claim your profile now 🏃‍♂️
+				</h4>
+			</div>
+			<div class="ct_modal_footer">
+			</div>
+		</div>
+	</div>
+
 	<script>
 		// Script for open/close Modal 
 		document.querySelectorAll('[data-ctModalTrigger]').forEach(single => {
